# water-sort

./: Cargo.toml  README.md  config.toml  test_input.txt
benches/: bfs_water_sort_benchmark.rs  heuristic_water_sort_benchmark.rs  mod.rs  water_sort_benchmark.rs
src/: lib.rs  main.rs
src/cli_arguments/: arguments.rs  mod.rs  parse_system.rs
src/game_elements/: color.rs  color_palette.rs  glass.rs  glass_system.rs  mod.rs  step.rs
src/generate/: mod.rs  system_generator.rs
src/glass/: color.rs  glass.rs  mod.rs
src/solver/: evaluation.rs  glass_system.rs  graph_builder.rs  mod.rs  node.rs  solution.rs  solver.rs  system_solver.rs
src/solver/data_structures/: mod.rs  node.rs  queues.rs  system_dictionary.rs
