[package]
name = "water-sort"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.2.0"
criterion = { version = "0.8.1", features = ["html_reports"] }
crossbeam = "0.8.4"
num_cpus = "1.17.0"
rand = "0.9.2"
thiserror = "2.0.9"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = "symbols"
debug = true

[[bench]]
name = "water_sort_benchmark"
harness = false
