[package]
name = "water-sort"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
colored = "2.2.0"
criterion = "0.8.1"
rand = "0.9.2"
thiserror = "2.0.9"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = "symbols"
debug = true

[[bench]]
name = "heuristic_water_sort_benchmark"
harness = false

[[bench]]
name = "bfs_water_sort_benchmark"
harness = false
